# dirv

./: .gitignore  Cargo.toml
aik-proto/: Cargo.toml
aik-proto/examples/: listen.rs  send.rs  utils.rs
aik-proto/src/: lib.rs
mshi-proto/: Cargo.toml  build.rs
mshi-proto/examples/: send.rs
mshi-proto/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  cls.ts  commands.ts  globalState.ts  main.scss  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: app_state.rs  lib.rs
ui/src/components/: BarChart.tsx  LineChart.tsx
ui/src/tabs/: CalibrationTab.tsx  CommandsTab.tsx  LogsTab.tsx  StatusTab.tsx  TestsTab.tsx
