[package]
name = "mshi-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
cc = "1.1.6"

[dependencies]
